# fastapi_jwt_auth

./: .env.tests  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
preload_data/: data.json  preload.py
src/: dependencies.py  main.py  models.py  settings.py
src/db/: connect.py  models.py  repos.py  uow.py
src/db/alembic/: env.py
src/db/alembic/versions/: 8607ade05976_initial.py
src/handlers/: __init__.py  auth.py
src/routers/: login.py  salary.py
tests/: conftest.py  test_login.py  test_salary.py
tests/utils/: db.py  models.py
